--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,12 @@ main:
   - name: Publications
     url: publication
     weight: 40
+  - name: Values
+    url: values
+    weight: 50
   - name: Join Us
     url: join
-    weight: 50
+    weight: 60
   - name: Contact
     url: contact
-    weight: 60
+    weight: 70
